CH8-Istio/istio_lab/poolejection/virtual_service_cb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v1
      weight: 25
    - destination:
        host: catalog
        subset: version-v2
      weight: 50
    - destination:
        host: catalog
        subset: version-v3
      weight: 25
